--- a/app/views/fees/scaduti.html.erb
+++ b/app/views/fees/scaduti.html.erb
@@ -1,6 +1,4 @@
-   <div id="footer-menu" class="box">
-    <%= render_menu :menu_fee_fs %>
-  </div><h2><%=l(:list_scaduti)%></h2>
+<h2><%=l(:list_scaduti)%></h2>
   In questa pagina:
   <ul> 
     <li>List utenti in stato di archiviazione: username, data registrazione, data ultimo pagamento</li>
