--- a/app/views/conventions/index.html.erb
+++ b/app/views/conventions/index.html.erb
@@ -31,16 +31,16 @@
       <strong>
       <% if conv.data_scadenza %>
         <% if DateTime.now > conv.data_scadenza %>
-          <span class="scadenza-ko"> <%= format_date(conv.data_scadenza) %>
+          <span class="scadenza-ko"> <%= format_date(conv.data_scadenza) %></span>
         <% elsif conv.data_scadenza < (DateTime.now + Setting.renew_days.to_i.days) %>
-          <span class="scadenza-renewing"><%= format_date(conv.data_scadenza) %>
+          <span class="scadenza-renewing"><%= format_date(conv.data_scadenza) %> </span>
         <% else  %>
-          <span class="scadenza-ok"><%= format_date(conv.data_scadenza) %>
+          <span class="scadenza-ok"><%= format_date(conv.data_scadenza) %> </span>
         <% end  %>
       <% else  %>
-        <span class="scadenza-none">Senza data di scadenza
+        <span class="scadenza-none">Senza data di scadenza  </span>
       <%	end  %>
-      </span></strong>
+      </strong>
       <br />
       <% if conv.user %>
         <%= link_to(h(conv.user), user_path(conv.user, :id => conv.user_id) ) %>
