--- a/app/views/comunes/new.html.erb
+++ b/app/views/comunes/new.html.erb
@@ -1,23 +1,8 @@
-<h1>New comune</h1>
-
-<% form_for(@comune) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :province_id %><br />
-    <%= f.text_field :province_id %>
-  </p>
-  <p>
-    <%= f.label :region_id %><br />
-    <%= f.text_field :region_id %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<h2 style="display:inline-block; width: 100%;"><%= link_to '&nbsp;', comunes_path %>  </h2>
+<span style="display: inline; position: absolute; left:65%; margin-top: -30px;">
+  <%= link_to (l :button_back), :back, :class => 'icon icon-cancel' %>&nbsp;</span>
+<p>&nbsp;</p>
+<% form_for @comune do |f| %>
+    <%= render :partial => 'form', :locals => {:f => f} %>
+    <div class="btn-footer"><%= f.submit l(:button_create), :class => "button-blu" %></div>
 <% end %>
-
-<%= link_to 'Back', comunes_path %>
