--- a/app/views/conventions/new.html.erb
+++ b/app/views/conventions/new.html.erb
@@ -1,8 +1,5 @@
 <h2><%= link_to l(:label_convention_plural), conventions_path %> &#187; <%= l(:label_convention_new) %></h2>
 <% labelled_form_for @conv, :html => {:multipart => true} do |f| %>
     <%= render :partial => 'form', :locals => {:f => f} %>
-    <p>
-      <%= f.submit l(:button_create) %>
-      <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
-    </p>
+    <div class="btn-footer"><%= f.submit l(:button_create), :class => "button-blu" %></div>
 <% end %>
