--- a/app/views/provinces/edit.html.erb
+++ b/app/views/provinces/edit.html.erb
@@ -1,24 +1,8 @@
-<h1>Editing province</h1>
-
-<% form_for(@province) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :region_id %><br />
-    <%= f.text_field :region_id %>
-  </p>
-  <p>
-    <%= f.label :sigla %><br />
-    <%= f.text_field :sigla %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+<h2 style="display:inline-block; width: 100%;"><%= link_to '&nbsp', provinces_path %>  </h2>
+<span style="display: inline; position: absolute; left:65%; margin-top: -30px;">
+  <%= link_to (l :button_back), :back, :class => 'icon icon-cancel' %>&nbsp;</span>
+<p>&nbsp;</p>
+<% form_for @province do |f| %>
+    <%= render :partial => 'form', :locals => {:f => f} %>
+    <div class="btn-footer"><%= f.submit l(:button_save), :class => "button-blu" %></div>
 <% end %>
-
-<%= link_to 'Show', @province %> |
-<%= link_to 'Back', provinces_path %>
