--- a/app/views/provinces/index.html.erb
+++ b/app/views/provinces/index.html.erb
@@ -1,24 +1,27 @@
-<h1>Lista province</h1>
-
+<h2 style="display:inline-block; width: 100%;"><%=link_to l(:label_province_plural), provinces_path %>  </h2>
+<span style="display: inline; position: absolute; left: 65%; margin-top: -30px;" >
+  <%= link_to l(:label_new_province), new_province_path, :class => 'icon icon-add' %></span>
+<br />
 <table>
-  <tr>
-    <th>Name</th>
-    <th>region_id</th>
-    <th>sigla</th>
+  <tr style="text-align:left;">
+    <th style="width: 55%;"><%=l :label_province %></th>
+    <th style="width: 15%;"><%=l :label_sigla %></th>
+    <th style="width: 5%;">id</th>
+    <th style="width: 15%;"><%=l :label_region %></th>
+    <th style="width: 5%;"></th>
+    <th style="width: 5%;"></th>
   </tr>
 
-<% @provinces.each do |province| %>
+<% @provinces.each do |item| %>
   <tr>
-    <td><%=h province.name %></td>
-    <td><%=h province.region_id %></td>
-    <td><%=h province.sigla %></td>
-    <td><%= link_to 'Show', province %></td>
-    <td><%= link_to 'Edit', edit_province_path(province) %></td>
-    <td><%= link_to 'Destroy', province, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td style="border: solid 1px #d3d3d3; font-weight: bold;"><%= link_to item.name, item %></td>
+    <td style="border: solid 1px #d3d3d3;"> <%=  item.sigla  %></td>
+    <td style="border: solid 1px #d3d3d3;"> <%=  item.id.to_s  %></td>
+    <td> <%= select_tag 'region_id', options_for_select(Region.all.collect { |itm| [itm.name, itm.id] }, item.region_id ),{:disabled => true}  %></td>
+      <td><%= link_to (l:button_edit), edit_province_path(item), :class => 'icon icon-edit' %>&nbsp;</td>
+    <td><%= link_to (l:button_delete), item, :confirm => 'Sei certo di voler eliminare?', :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
 
-<%= link_to 'New province', new_province_path %>
