--- a/app/views/comunes/index.html.erb
+++ b/app/views/comunes/index.html.erb
@@ -10,8 +10,8 @@
 <table>
   <tr style="text-align:left;">
     <th style="width: 55%;"><%=l :label_comune %></th>
-    <th style="width: 15%;"><%=l :label_region %></th>
     <th style="width: 15%;"><%=l :label_province %></th>
+    <th style="width: 15%;"><%=l :label_region %></th>
     <th style="width: 5%;"></th>
     <th style="width: 5%;"></th>
   </tr>
@@ -19,10 +19,9 @@
 <% @comunes.each do |comune| %>
   <tr>
     <td style="border: solid 1px #d3d3d3; font-weight: bold;"><%= link_to comune.name, comune %></td>
-    <td> <%= select_tag 'region_id', options_for_select(Region.all.collect { |itm| [itm.name.upcase, itm.id] }, comune.region_id ),{:disabled=>true}  %></td>
-    <td> <%= select_tag 'province_id', options_for_select(Province.all.collect { |itm| [itm.name, itm.id] }, comune.province_id ),{:disabled => true}  %></td>
-
-      <td><%= link_to (l:button_edit), edit_comune_path(comune), :class => 'icon icon-edit' %>&nbsp;</td>
+    <td><%= link_to comune.province.name, comune_path(comune.province) %></td>
+    <td><%= link_to image_tag('Regione/reg_' + comune.province.region.id.to_s + '.png') + '&nbsp;' + comune.province.region.name, region_path(comune.province.region) %>&nbsp;</td>
+    <td><%= link_to (l:button_edit), edit_comune_path(comune), :class => 'icon icon-edit' %>&nbsp;</td>
     <td><%= link_to (l:button_delete), comune, :confirm => 'Sei certo di voler eliminare?', :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
 <% end %>
@@ -32,4 +31,3 @@
     <%	end  %>
 
 <br />
-
