--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -30,7 +30,7 @@
     <dl id="search-results">
       <% @results.each do |e| %>
         <dt class="<%= e.event_type %>"><%= content_tag('span', h(e.project), :class => 'project') unless @project == e.project %> <%= link_to highlight_tokens(truncate(h(e.event_title), :length => 255), @tokens), e.event_url %></dt>
-        <dd><span class="description"><%= highlight_tokens(h(e.event_description), @tokens) %></span>
+        <dd><span class="description"><%= e.is_a?(Issue) ? highlight_tokens(truncate(e.summary, :length => 255), @tokens) : highlight_tokens(h(e.event_description), @tokens) %></span>
         <span class="author"><%= format_time(e.event_datetime) %></span></dd>
       <% end %>
     </dl>
